<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="button_title_popular_movies">Popular Movies</string>
    <string name="button_title_stock_hawk">Stock Hawk</string>
    <string name="button_title_build_it_bigger">Build It Bigger</string>
    <string name="button_title_make_your_app_material">Make Your App Material</string>
    <string name="button_title_go_ubiquitous">Go Ubiquitous</string>
    <string name="button_title_capstone">Capstone</string>
    <string name="page_header">My Nanodegree Apps!</string>
</resources>
